[tool.poetry]
name = "orkg-nlp"
version = "0.1.0"
description = "Python package wrapping the ORKG NLP Services."
authors = ["Omar Arab Oghli"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
