[tool.poetry]
name = "orkgnlp"
version = "0.1.5"
description = "Python package wrapping the ORKG NLP Services."
license = "MIT"
authors = ["Omar Arab Oghli <omar.araboghli@outlook.com>"]
maintainers = ["Omar Arab Oghli"]
readme = "README.md"
homepage = "http://orkg.org/about"
repository = "https://gitlab.com/TIBHannover/orkg/nlp/orkg-nlp-pypi"
documentation = "https://orkg-nlp-pypi.readthedocs.io/en/latest/"
keywords = ["ORKG", "NLP", "Scholarly Communication", "Digital Library"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.0"
huggingface-hub = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
