[tool.poetry]
name = "orkgnlp"
version = "0.5.0"
description = "Python package wrapping the ORKG NLP Services."
license = "MIT"
authors = ["Omar Arab Oghli <omar.araboghli@outlook.com>"]
maintainers = ["Omar Arab Oghli"]
readme = "README.md"
homepage = "http://orkg.org/about"
repository = "https://gitlab.com/TIBHannover/orkg/nlp/orkg-nlp-pypi"
documentation = "https://orkg-nlp-pypi.readthedocs.io/en/latest/"
keywords = ["ORKG", "NLP", "Scholarly Communication", "Digital Library"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
huggingface-hub = "^0.5.1"
numpy = "1.21.6"
pandas = "1.3.5"
nltk = "3.5"
onnxruntime = "1.11.1"
onnx = "1.11.0"
torch = "1.11.0"
spacy = "3.3.0"
overrides = "^6.1.0"
protobuf = "3.20.0"
transformers = "4.19.3"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
